--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <canvas data-processing-sources="Main.pde"></canvas>
+    <canvas data-processing-sources="Main.pde Button.pde"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
-    <script src="index.js"></script>
   </body>
 </html>
