--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>repl.it</title>
   </head>
   <body>
-    <canvas data-processing-sources="Main.pde Button.pde"></canvas>
+    <canvas data-processing-sources="Main.pde View.pde ButtonBuilder.pde Button.pde TextBox.pde"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
   </body>
 </html>
